--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         </plugins>
     </build>
     <scm>
-        <developerConnection>scm:git:git@github.com:springframeworkguru/sfg-pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:fankao/sgfpetclinic.git</developerConnection>
       <tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
 
