--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>sfg-pet-clinic</name>
     <description>SFG Pet Clinic Project</description>
 
@@ -40,5 +40,6 @@
     </build>
     <scm>
         <developerConnection>scm:git:https://github.com/fankao/sgfpetclinic.gitcla</developerConnection>
+    <tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
 </project>
