--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>SFG Pet Clinic Project</description>
 
@@ -39,7 +39,6 @@
         </plugins>
     </build>
     <scm>
-        <developerConnection>scm:git:https://github.com/fankao/sgfpetclinic.git</developerConnection>
-    <tag>sfg-pet-clinic-0.0.1</tag>
+        <developerConnection>scm:git:git@github.com:fankao/sgfpetclinic.git</developerConnection>
   </scm>
 </project>
