--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.thymeleaf.cache=false
 
 #Internatilational
 spring.messages.basename=messages/messages
+
+spring.profiles.active=springdatajpa
